
import java.util.Scanner;

public class Main {

    public static void main(String[] args){
        Controller controller = new Controller();
        controller.runController();

    }
}

























